test/testFunc/func8.out
func8.rask:9:11: error: unknown identifier 'local'

