test/testFunc/func8.rask
f() -> void
{
    var local = 1;
    print(local);
}

main() -> void
{
    print(local);
}
